testsuite/tests/parser/should_fail/ViewPatternsFail.hs

module ViewPatternsFail where

data Foo = Foo { a :: Int }

foo :: Foo -> Int
foo (a -> l) = l
